Using jpa and mapstruct to handle persistence and mapping